// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders MyDragons desktop 1`] = `
<div
  className="container"
>
  <main>
    <AppToolbar
      accountsState={
        Object {
          "connectToProvider": [Function],
          "mainchain_account": null,
          "provider_installed": false,
        }
      }
      deviceType="desktop"
      section="my-dragons"
    />
    <p>
      My Dragons
    </p>
  </main>
</div>
`;

exports[`Renders MyDragons mobile 1`] = `
<div
  className="container"
>
  <main>
    <AppToolbar
      accountsState={
        Object {
          "connectToProvider": [Function],
          "mainchain_account": null,
          "provider_installed": false,
        }
      }
      deviceType="mobile"
      section="my-dragons"
    />
    <p>
      My Dragons
    </p>
  </main>
</div>
`;
